src/test/deca/context/invalid/class_meth_int_without_return.deca
//  Description : 
// 
//      Test incorrect qui utilise une methode int sans return
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {
    int x=3;
    int methodePlusOne(){
        int y= x+1;
    }
}